[package]
name = "rust-tunnel"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
async-trait = "0.1.83"
clap = { version = "4.5.23", features = ["derive"] }
confy = "0.6.1"
env_logger = "0.11.6"
log = "0.4.22"
rand_core = "0.6.4"
russh = "0.49.2"
russh-sftp = "2.0.6"
serde = "1.0.217"
tokio = { version = "1.42.0", features = ["fs", "io-util", "rt", "rt-multi-thread", "signal"] }
